syntax = "proto2";

package pb;

import "GameSettings.proto";

import "PseudorandomSystem.proto";
import "VictorySystem.proto";
import "YearSystem.proto";
import "HeatSystem.proto";

import "ProvinceMechanic.proto";
import "LeaderMechanic.proto";

message GameState {
  optional int32 turn = 1;
  optional GameSettings game_settings = 2;

  // Systems
  optional PseudorandomSystemState pseudorandom_sys_state = 3;
  optional VictorySystemState victory_sys_state = 4;
  optional YearSystemState year_sys_state = 5;
  optional HeatSystemState heat_sys_state = 6;

  // Mechanics
  optional ProvinceMechanicState province_mech_state = 101;
  optional LeaderMechanicState leader_mech_state = 102;

  // Turn Log
  repeated TurnLogEntry turn_log_entries = 201;
}

message TurnLogEntry {
  optional GameState initial_state = 1;
  //optional MoveList usa_moves = 2;
  //optional MoveList ussr_moves = 3;
  //repeated Event events = 4;
}
