syntax = "proto2";

package nucrom;

// ========== Settings ==========

// The top-level settings proto included in GameSettings.
// Immutable over the duration of a single game.

message YearSystemSettings {
  optional int32 init_year = 1;
}

// ========== State ==========

// The top-level state proto included in GameState.
// Mutated each turn based on moves.

message YearSystemState {
  optional int32 year = 1;
}
